--- a/EmbeddedDesktop.vcxproj
+++ b/EmbeddedDesktop.vcxproj
@@ -126,6 +126,7 @@
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AddressLocate.h" />
     <ClInclude Include="HelloClass.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
