--- a/EmbeddedDesktop.vcxproj.filters
+++ b/EmbeddedDesktop.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="HelloClass.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="AddressLocate.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
